<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:background="#cdcdcd"
    tools:context="com.launcher.elderlylauncher.DialogActivity">

    <TextView
        android:id="@+id/noti_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="#212121"/>

    <TextView
        android:id="@+id/noti_detail"
        android:layout_below="@+id/noti_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_detail"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="25sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noti_detail"
        android:gravity="center">

        <Button
            android:id="@+id/btnPeply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reply"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="10dp"/>


    </LinearLayout>

</RelativeLayout>
