<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#cdcdcd"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/view_message"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textColor="#212121"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="50dp"
                android:gravity="end"
                android:text="@string/sms_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textColor="#414141" />

            <TextView
                android:id="@+id/viewTopic"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:hint="@string/title"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:textColor="#212121" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_gravity="top"
                android:gravity="end"
                android:text="@string/sms_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textColor="#414141" />

            <TextView
                android:id="@+id/viewMessage"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginEnd="50dp"
                android:gravity="top"
                android:hint="@string/message"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:textColor="#212121" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/okay" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="backMessages"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>