<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#374045"
    android:gravity="center"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:background="#cdcdcd">

            <TextView
                android:id="@+id/messageSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/sms_send"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#212121"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/messageSend"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="50dp"
                        android:text="@string/sms_from"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#212121"
                        android:gravity="end"/>

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:paddingStart="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:hint="@string/username"
                        android:textColor="#212121"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="50dp"
                        android:text="@string/sms_to"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#212121"
                        android:gravity="end"/>

                    <Button
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:hint="@string/selectFromContact"
                        android:textColor="#212121" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="50dp"
                        android:text="@string/sms_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#212121"
                        android:gravity="end"/>

                    <EditText
                        android:id="@+id/messageTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:hint="@string/title"
                        android:textColor="#212121" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginStart="50dp"
                        android:text="@string/sms_detail"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#212121" />

                    <EditText
                        android:id="@+id/messageField"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="top"
                        android:layout_marginEnd="50dp"
                        android:ems="10"
                        android:gravity="top"
                        android:hint="@string/message"
                        android:inputType="textMultiLine"
                        android:textColor="#212121" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/box"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/send" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="backMessages"
                    android:text="@string/cancel" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>