<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#374045"
    tools:context=".ContactFind">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="70dp"
        android:background="#cdcdcd">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/findContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#212121"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>

            <EditText
                android:id="@+id/searchContact"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tableContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#ededed">

            <View
                android:layout_height="1dip"
                android:background="#CCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/listReadMessages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_height="1dip"
                android:background="#CCCCCC" />

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
