<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageView android:id="@+id/imgAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:id="@+id/tvName"
                    android:paddingEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212121"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView android:id="@+id/tvLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#212121"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView android:id="@+id/tvUsername"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#212121"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp" />

            <TextView android:id="@+id/tvPhone"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#212121"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp"
                />

            <TextView android:id="@+id/tvEmail"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>